Fix overflow-x issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,6 @@ main {
 
 /* Explore Northeast section */
 #explore-northeast {
-    width: 98vw;
     margin: 2vh;
 }
 
@@ -232,7 +231,6 @@ main {
 
 /* Explore map section */
 #explore-map {
-    width: 98vw;
     margin: 2vh;
 }
 
@@ -299,7 +297,6 @@ main {
 
 /* Assam section */
 #travel-assam {
-    width: 98vw;
     margin: 2vh;
 }
 
@@ -347,7 +344,6 @@ main {
 
 /* Meghalaya section */
 #travel-meghalaya {
-    width: 98;
     margin: 2vh;
 }
 
